--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yeasin Portfolio</title>
-    <link rel="icon" href="/Photo.png" />
+    <link rel="icon" href="./src/assets/my_image.jpg" />
   </head>
   <body>
     <div id="root"></div>
